--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-this is the default page
+<!DOCTYPE html>
+<head>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+</head>
+<body>
+  this is the default page
+
+  could be also fullscreen if you got an ios thingy with the bookmark in your home screen
+</body>
