--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <meta name="theme-color" content="#EF444480" />
   <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
